Fix body overflow.

--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ body {
   font-family: Helvetica, sans-serif;
   text-transform: uppercase;
   font-size: 14px;
+  overflow-x: hidden;
 }
 
 * {
